# preference-guided-image-captioning-alignment

./: .gitignore  IMPROVEMENTS.md  QUALITY_PASS_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml  environment.yaml  logging.yaml
notebooks/: exploration.ipynb
results/: results.json  results_summary.json
scripts/: evaluate.py  predict.py  run_evaluation.py  train.py
src/preference_guided_image_captioning_alignment/: __init__.py
src/preference_guided_image_captioning_alignment/data/: __init__.py  loader.py  preprocessing.py
src/preference_guided_image_captioning_alignment/evaluation/: __init__.py  metrics.py
src/preference_guided_image_captioning_alignment/models/: __init__.py  components.py  model.py
src/preference_guided_image_captioning_alignment/training/: __init__.py  trainer.py
src/preference_guided_image_captioning_alignment/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
