[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preference-guided-image-captioning-alignment"
version = "0.1.0"
description = "A novel multimodal alignment system that combines image-caption contrastive learning with human preference optimization"
authors = [
    {name = "A-SHOJAEI"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "trl>=0.4.0",
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "PyYAML>=6.0",
    "wandb>=0.15.0",
    "mlflow>=2.4.0",
    "pycocotools>=2.0.6",
    "evaluate>=0.4.0",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/A-SHOJAEI/preference-guided-image-captioning-alignment"
Repository = "https://github.com/A-SHOJAEI/preference-guided-image-captioning-alignment"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/preference_guided_image_captioning_alignment --cov-report=html --cov-report=term"